--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,13 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Task Planner App",
+	"name": "Task Planner APP IETI",
+	"lang": "es",
+	"start_url": "/",
+	"background_color": "#00aae7",
+	"theme_color": "#00aae7",
+	"dir": "ltr",
+	"display": "standalone",
+	"orientation": "any",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +25,5 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "prefer_related_applications": "false"
 }
